# RPG

./: .gitignore  CMakeLists.txt  act_choose.c  battle.c  battle.h  enemy_choose.c  enemy_choose.h  global.h  global_variables.c  global_variables.h  heal.c  heal.h  hello.c  hello.h  looting.c  lvl_up_check.c  lvl_up_check.h  main.c  main.h  player_death_check.c  player_death_check.h  save.txt  status.c  status.h
headers/: act_choose.h  looting.h
includes/: act_choose.h  battle_tutorial.h  enemy_choose.h  global.h  global_variables.h  looting.h  lvl_up_check.h  noCursor.h  player_death_check.h  save_the_game.h
sourses/: act_choose.c  battle.c  battle_tutorial.c  enemy_choose.c  global_variables.c  heal.c  hello.c  looting.c  lvl_up_check.c  main.c  noCursor.c  player_death_check.c  save_the_game.c  status.c
